src/template/api-gateway/service.yaml
apiVersion: v1
# Kind for service
kind: Service
metadata:
  # Name your service
  name: api-gateway
  labels:
    app: crm
spec:
  # Choose how to expose your service
  ports:
    # The port number to expose the service
    - protocol: TCP
      port: 3000
      name: api

  # Pod to route service traffic
  selector:
    app: crm
    name: api-gateway
